# protein_design

./: CMakeLists.txt  NSC_example.cpp  README.md  example.cpp  helix.cpp
CuP422/: CMakeLists.txt
CuP422/src/: CuP422.cpp  main.cpp  simple.h
CuP422/tools/modules/: FindIPOPT.cmake
P222/: CMakeLists.txt
P222/src/: P222.cpp  P222_1.cpp  P222_9.cpp
P422/: CMakeLists.txt  Makefile
P422/src/: P422.cpp
P422/tools/modules/: FindVERGIL.cmake
crosslinker/: CMakeLists.txt
crosslinker/src/: crosslinker.cpp  simple.cpp
crosslinker/tools/: clean-all.cmake
crosslinker/tools/modules/: FindVERGIL.cmake
